--- a/index.html
+++ b/index.html
@@ -1,12 +1,34 @@
 <html>
 <title> Welcome to the coding </title>
 <body>
-<h> This is my first website</h>
+<h> </h>
+  <p> Amit Kumar Singh
+  amit2020cs@gmail.com
+  8726075424
+  </p>
+  <h1>Education</h1>
+  <p>Bachelor of technology (B.Tech) ,Computer Science (2016-2020),Guru Govind Singh Indraprasth University (GGSIPU),Delhi.
+  XIIth(CBSE),2014-2016
+    Xth(CBSE),2012-2014
+  </p>
+  <h1>Skills</h1>
+  <ol> 
+    <li>c</li>
+  <li>HTML</li>
+    <li>css</li>
+    <li>javascript</li>
+    <li>datastructure</li>
+    <li>computer graphics</li>
+    <li>Ms-Excel</li>
+    <li></li>
+  
+  </ol>
 <style>
 body{
 background-color: blue;
 color:#fff;
 text-align:center;
+  }
 </style>
 </body>
 </html>
