--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <title> Welcome to the coding </title>
 <body>
-<h> </h>
+<h> Introduction</h>
   <p> Amit Kumar Singh
   amit2020cs@gmail.com
   8726075424
@@ -26,7 +26,7 @@
 <style>
 body{
 background-color: blue;
-color:#fff;
+color:#AA49FG;
 text-align:center;
   }
 </style>
