--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE>
-<html><head>Hello World</head>
-<title> Welcome to the coding </title>
+<html>
+<title>Welcome to the coding</title>
 <body>
 <h> Introduction</h>
-  <p> Amit Kumar Singh
-  amit2020cs@gmail.com
-  8726075424
+  <ul> <li>Amit Kumar Singh</li>
+    <li>amit2020cs@gmail.com</li>
+    <li>8726075424</li>
   </p>
   <h1>Education</h1>
   <p>Bachelor of technology (B.Tech) ,Computer Science (2016-2020),Guru Govind Singh Indraprasth University (GGSIPU),Delhi.
-  XIIth(CBSE),2014-2016
-    Xth(CBSE),2012-2014
+  <ul><li>XIIth(CBSE),2014-2016</li>
+    <li>Xth(CBSE),2012-2014</li>
+  </ul>
   </p>
   <h1>Skills</h1>
   <ol> 
@@ -25,4 +26,11 @@
   
   </ol>
   </body>
+<style>
+body{
+background-color:blue;
+  color:#fff;
+  text-align:center;
+  }
+</style>
 </html>
