--- a/index.html
+++ b/index.html
@@ -1,20 +1,22 @@
-<!DOCTYPE>
 <html>
-<title>Welcome to the coding</title>
-<body>
-<h> Introduction</h>
-  <ul> <li>Amit Kumar Singh</li>
+<head>
+  <title>Welcome</title>
+  </head>
+  <body>
+<h1> Introduction</h1>
+  <ul>
+    <li>Amit Kumar Singh</li>
     <li>amit2020cs@gmail.com</li>
-    <li>8726075424</li>
-  </p>
+    <li> Mob : 8726075424</li>
+    </ul>
   <h1>Education</h1>
-  <p>Bachelor of technology (B.Tech) ,Computer Science (2016-2020),Guru Govind Singh Indraprasth University (GGSIPU),Delhi.
-  <ul><li>XIIth(CBSE),2014-2016</li>
+  <p>Bachelor of technology (B.Tech) ,Computer Science (2016-2020),Guru Govind Singh Indraprasth University (GGSIPU),Delhi.</p>
+  <ul>
+    <li>XIIth(CBSE),2014-2016</li>
     <li>Xth(CBSE),2012-2014</li>
   </ul>
-  </p>
   <h1>Skills</h1>
-  <ol> 
+  <ul> 
     <li>c</li>
   <li>HTML</li>
     <li>css</li>
@@ -22,14 +24,8 @@
     <li>datastructure</li>
     <li>computer graphics</li>
     <li>Ms-Excel</li>
-    <li></li>
+    <li>SDL</li>
   
-  </ol>
+  </ul>
   </body>
-<style>
-body{
-  color:#fff;
-  text-align:left;
-  }
-</style>
 </html>
