--- a/amit.html
+++ b/amit.html
@@ -25,7 +25,9 @@
     <li>datastructure</li>
     <li>computer graphics</li>
     <li>Ms-Excel</li>
-    <li></li>
+    <li>git</li>
+    <li>c++</li>
+    
   
   </ol>
   </body>
