Added data science in skill section

--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
   </ul>
   <h1>Skills</h1>
   <ul> 
-    <li>c</li>
+    <li>C</li>
   <li>HTML</li>
     <li>css</li>
     <li>javascript</li>
     <li>datastructure</li>
-    <li>computer graphics</li>
+    <li>computer graphics and multimedia</li>
     <li>Ms-Excel</li>
-    <li>SDL</li>
-  
+    <li>Software development lifecycle</li>
+    <li>Data Science and Machine Learning</li>
   </ul>
   </body>
 </html>
