--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <li>HTML</li>
     <li>css</li>
     <li>javascript</li>
+    <li>python</li>
     <li>datastructure</li>
     <li>computer graphics and multimedia</li>
     <li>Ms-Excel</li>
