added java skill

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <li>css</li>
     <li>javascript</li>
     <li>python</li>
+    <li>java </li>
     <li>datastructure</li>
     <li>computer graphics and multimedia</li>
     <li>Ms-Excel</li>
